<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PartyGo</string>

    <string name="main_activity_description">Jouez partout\n avec les gens autour de vous !</string>

    <string name="welcome_message">BIENVENUE</string>
    <string name="game_choice_message">Selectionnez un jeu :</string>

    <string name="login">Connexion / Inscription</string>
    <string name="signin"> </string>

    <!-- NOTIFICATION SERVICE -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_title">"Vous avez reçu une notification"</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>
    <string name="button_crash">Crash Test</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Aucune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_mentor">Etes-vous un mentor ?</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">420763051691337</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb420763051691337</string>

    <!-- DESCRIPTION DES IMAGES -->
    <string name="button_setting_desc" translatable="false">Bouton de paramètre de compte</string>
    <string name="button_delete_desc" translatable="false">Bouton de suppression de compte</string>
    <string name="button_logout_desc" translatable="false">Bouton de déconnexion de compte</string>
    <string name="party_go_logo_title" translatable="false">Modèle du titre de Party Go</string>

    <!-- PROFILE ACTIVITY -->
    <string name="user_name" translatable="false">Nom Prénom</string>
    <string name="user_email" translatable="false">Email</string>
    <string name="desc_user_name" translatable="false">User name</string>
    <string name="desc_user_email" translatable="false">User email</string>
    <string name="desc_user_picture" translatable="false">User picture</string>
    <string name="logout_text" translatable="false">Déconnexion</string>
    <string name="delete_account_text" translatable="false">Suppression</string>
    <string name="update_button">Paramètres</string>
    <string name="jeu1">Color tap</string>
    <string name="jeu2">Canon shot</string>
    <string name="jeu3">Tap run</string>
    <string name="jeu4">Jeu 4</string>
    <string name="jeu5">Jeu 5</string>

    <!-- UPDATE ACTIVITY -->
    <string name="title_update">Modifiez vos informations</string>
    <string name="username_field">Pseudo</string>
    <string name="firstName_field">Prénom</string>
    <string name="lastName_field">Nom</string>
    <string name="submit_update_username">Modifier le pseudo</string>
    <string name="submit_update_last_name">Modifier le nom</string>
    <string name="submit_update_first_name">Modifier le prénom</string>
    <string name="success_update_username">Le pseudo a bien été mis à jour</string>
    <string name="success_update_firstname">Votre prénom a bien été mis à jour</string>
    <string name="success_update_lastname">Votre nom a bien été mis à jour</string>
    <string name="error_update_username">Votre pseudo doit contenir au moins 3 caratères et ne peut contenir que des lettres,des chiffres et un underscore</string>
    <string name="error_update_firstname">Votre prénom doit contenir au moins 3 caratères et ne peut contenir que des lettres</string>
    <string name="error_update_lastname">Votre nom doit contenir au moins 3 caratères et ne peut contenir que des lettres</string>

    <!-- ARRAY ADAPTER USER (LIST) ACTIVITY (aaua) -->
    <string name="aaua_lvl">Niveau : </string>
    <string name="aaua_xp">Expérience : </string>
    <string name="aaua_go_button_desc">button go to challenge the player</string>

    <!-- MAIN MENU ACTIVITY (mma) -->
    <string name="mma_play">JOUER !</string>
    <string name="mma_dc">DECONNEXION</string>
    <string name="mma_profil">MON PROFIL</string>

    <!-- ERRORS -->
    <string name="no_user_connected_error">Erreur : Aucun utilisateur connecté</string>

    <!-- LABEL -->
    <!--
        <string name="users_list">Choisi ton adversaire !</string>
    -->

    <!-- MAP ACTIVITY -->
    <string name="title_activity_maps">Map</string>
    <string name="positive_button_alert_dialog">OK</string>
    <string name="permission_explanation">PartyGO nécéssite l\'accès à la localisation de votre appareil afin de pouvoir fonctionner correctement. </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
