<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity">

    <!-- MAIN CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="764dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <!-- IMAGE VIEW FIREBASE OC -->
        <ImageView
            android:id="@+id/main_activity_imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="@dimen/default_large_margin"
            android:background="@drawable/ic_logo_auth"
            android:contentDescription="FireBase"
            tools:ignore="HardcodedText" />

        <!-- TITLE FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/app_name"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold" />

        <!-- DESCRIPTION FIREBASE OC -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/main_activity_description"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTONS CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="402dp"
            android:layout_margin="@dimen/default_large_margin"
            android:gravity="top"
            android:orientation="vertical" >

            <!-- BUTTON LOGIN -->
            <Button
                android:id="@+id/main_activity_button_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_primary_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <Button
                android:id="@+id/main_activity_button_crash"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_large_margin"
                android:background="@drawable/button_radius_error_color"
                android:padding="@dimen/default_large_margin"
                android:text="@string/button_crash"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>