<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.UpdateUserActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="721dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/update_activity_title_textView"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:text="@string/title_update"
            tools:text="Modifiez vos informations" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_activity_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username_field" />

            <EditText
                android:id="@+id/update_activity_username_field"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/username_field"
                android:hint="@string/username_field"
                tools:targetApi="o" />

            <Button
                android:id="@+id/update_activity_username_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_activity_firstName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/firstName_field" />

            <EditText
                android:id="@+id/update_activity_firstName_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/firstName_field" 
                android:labelFor="@+id/update_activity_firstName_label"
                tools:targetApi="o"
                android:autofillHints="@string/firstName_field"
                android:hint="@string/firstName_field"/>

            <Button
                android:id="@+id/update_activity_firstName_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_update" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update_activity_lastName_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lastName_field" />

            <EditText
                android:id="@+id/update_activity_lastName_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/lastName_field" 
                android:labelFor="@+id/update_activity_lastName_label"
                android:autofillHints="@string/lastName_field"
                tools:targetApi="o" 
                android:hint="@string/lastName_field"/>

            <Button
                android:id="@+id/update_activity_lastName_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit_update" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>